# ChangeLog for www-client/firefox-bin
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/firefox-bin/ChangeLog,v 1.208 2014/10/15 13:43:02 axs Exp $

*firefox-bin-31.2.0 (15 Oct 2014)

  15 Oct 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org>
  +firefox-bin-31.2.0.ebuild:
  version bumped 31.x ESR (restoring a 31.x version to the tree, bug 525486),
  security bug 525474

*firefox-bin-33.0 (14 Oct 2014)

  14 Oct 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org>
  +firefox-bin-33.0.ebuild, -firefox-bin-24.8.0.ebuild,
  -firefox-bin-31.1.1.ebuild, -firefox-bin-32.0.3.ebuild:
  version bump, remove old

  06 Oct 2014; Agostino Sarubbo <ago@gentoo.org> firefox-bin-24.8.1.ebuild:
  Stable for x86, wrt bug #523652

  06 Oct 2014; Agostino Sarubbo <ago@gentoo.org> firefox-bin-24.8.1.ebuild:
  Stable for amd64, wrt bug #523652

*firefox-bin-32.0.3 (26 Sep 2014)
*firefox-bin-24.8.1 (26 Sep 2014)
*firefox-bin-31.1.1 (26 Sep 2014)

  26 Sep 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org>
  +firefox-bin-24.8.1.ebuild, +firefox-bin-31.1.1.ebuild,
  +firefox-bin-32.0.3.ebuild, -firefox-bin-17.0.10.ebuild,
  -firefox-bin-17.0.9.ebuild, -firefox-bin-24.7.0.ebuild,
  -firefox-bin-31.1.0.ebuild, -firefox-bin-32.0.ebuild:
  security bump, bug 523652 ; removed old

  05 Sep 2014; Agostino Sarubbo <ago@gentoo.org> firefox-bin-24.8.0.ebuild:
  Stable for x86, wrt bug #522020

  05 Sep 2014; Agostino Sarubbo <ago@gentoo.org> firefox-bin-24.8.0.ebuild:
  Stable for amd64, wrt bug #522020

*firefox-bin-24.8.0 (03 Sep 2014)
*firefox-bin-32.0 (03 Sep 2014)
*firefox-bin-31.1.0 (03 Sep 2014)

  03 Sep 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org>
  +firefox-bin-24.8.0.ebuild, +firefox-bin-31.1.0.ebuild,
  +firefox-bin-32.0.ebuild, -firefox-bin-24.6.0.ebuild,
  -firefox-bin-31.0.ebuild:
  version bump, removed some old

  04 Aug 2014; Agostino Sarubbo <ago@gentoo.org> firefox-bin-24.7.0.ebuild:
  Stable for x86, wrt bug #517876
